# labCC

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8f817f4  cipher.cpp  cipher.h  compile_commands.json  englishtextedit.h  hexlineedit.h  hextextedit.h  lfsr.cpp  lfsr.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp
docs/: labCC.html  labCC.ipynb  labCC.md
